# VsCode-Project-Template-Yocto-Toolchain

./: CMakeLists.txt  README.md
inc/: main.hpp
src/: CMakeLists.txt  main.cpp
